apps/warpgate/service-warpgate-ssh.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: warpgate-ssh
  namespace: warpgate
  labels:
    app.kubernetes.io/name: warpgate
    app.kubernetes.io/instance: warpgate
    advertise: bgp
spec:
  type: LoadBalancer
  loadBalancerIP: 172.21.0.10
  selector:
    app.kubernetes.io/name: warpgate
    app.kubernetes.io/instance: warpgate
  ports:
    - name: ssh
      protocol: TCP
      port: 2222
      targetPort: 2222
